- Fix some styling issues on the landing page. 	- transparent overlay had no height on mobile breakpoint. 	- the video container was too tall and pushed the bottom text down too far 	- "The best way to discover..." was too long on chrome so I took off nowrap - Made the video wrapper 400px on mobile breakpoint 	- I like this look but we'll talk about it.

--- a/app/styles/pages/_landingpage.scss
+++ b/app/styles/pages/_landingpage.scss
@@ -144,13 +144,14 @@
 // LANDING PAGE VIDEO
 
 .lp-video-wrapper {
-  height: 600px;
+  height: 400px;
   overflow: hidden;
   // margin-top: -60px;
   width: 100%;
   min-width: 970px;
   background-size: cover;
   @media screen and (min-width: 1280px){
+      height: 500px;
       display: block;
       width: 100%;
       // margin-top: -200px;
@@ -184,8 +185,8 @@
     background-size: cover;
     .lp-video-overlay-wrapper {
       background-color: transparentize(nth($purple-list, 1), 0.2);
-      padding-top: 25px;
-      // height: inherit;
+      padding-top: 100px;
+      height: inherit;
     }
     @media screen and (min-width: 1280px){
       .lp-video-overlay-wrapper {
@@ -195,13 +196,13 @@
       // height: inherit;
       background: none;
       @include slide-out (translateY(0%), translateY(-100%), 100%);  
-      top: 10%;
+      top: 5%;
       width: 970px;
       border-radius: 10px;
     }    
     h1, h2, h3, h4 {
       color: $offwhite;
-      white-space: nowrap;
+      // white-space: nowrap;
       overflow: hidden;
       // text-overflow: ellipsis;
       text-align: center;
